--- a/jfw-webutil/pom.xml
+++ b/jfw-webutil/pom.xml
@@ -4,9 +4,12 @@
 	<parent>
 		<groupId>org.jfw</groupId>
 		<artifactId>framework</artifactId>
-		<version>${project.version}</version>
+		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>jfw-webutil</artifactId>
+ 	<properties>
+	</properties> 
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
