--- a/jfw-apt/pom.xml
+++ b/jfw-apt/pom.xml
@@ -4,21 +4,11 @@
 	<parent>
 		<groupId>org.jfw</groupId>
 		<artifactId>framework</artifactId>
-		<version>${project.version}</version>
+		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>jfw-apt</artifactId>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+	<properties>
+		<!-- <maven.compiler.useIncrementalCompilation>false</maven.compiler.useIncrementalCompilation> -->
+	</properties>
 </project>
