--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,26 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jfw</groupId>
 	<artifactId>framework</artifactId>
-	<version>${project.version}</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
 		<module>jfw-util</module>
 		<module>jfw-webutil</module>
 		<module>jfw-apt</module>
-		<module>jfw-test-dao</module>
 	</modules>
 	<properties>
-		<project.version>0.0.1-SNAPSHOT</project.version>
 	</properties>
+		<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
