--- a/jfw-apt/pom.xml
+++ b/jfw-apt/pom.xml
@@ -10,5 +10,6 @@
 	<artifactId>jfw-apt</artifactId>
 	<properties>
 		<!-- <maven.compiler.useIncrementalCompilation>false</maven.compiler.useIncrementalCompilation> -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 </project>
