--- a/jfw-webutil/pom.xml
+++ b/jfw-webutil/pom.xml
@@ -8,8 +8,9 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>jfw-webutil</artifactId>
- 	<properties>
-	</properties> 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties> 
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
