--- a/jfw-apt/pom.xml
+++ b/jfw-apt/pom.xml
@@ -5,11 +5,23 @@
 		<groupId>org.jfw</groupId>
 		<artifactId>framework</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>jfw-apt</artifactId>
 	<properties>
-		<!-- <maven.compiler.useIncrementalCompilation>false</maven.compiler.useIncrementalCompilation> -->
+		 <maven.compiler.useIncrementalCompilation>false</maven.compiler.useIncrementalCompilation>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
