--- a/jfw-apt/pom.xml
+++ b/jfw-apt/pom.xml
@@ -12,7 +12,12 @@
 	</properties>
 
 	<dependencies>
-
+<!-- 		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.1</version>
+			<scope>provided</scope>
+		</dependency> -->
 	</dependencies>
 	<build>
 		<plugins>
